RA-1592 :- Fix find patient button text white space.

--- a/omod/src/main/compass/sass/home.scss
+++ b/omod/src/main/compass/sass/home.scss
@@ -72,3 +72,9 @@ hr.separator {
     margin-left: unset !important;
   }
 } 
+
+@media only screen and (min-width : 991px)  {
+  .findPatient {
+    white-space: nowrap !important;
+  }
+}
